feat: added the buy module
